frame/support/test/tests/decl_module_ui/reserved_keyword_two_times_on_initialize.stderr
error: `on_initialize` can only be passed once as input.
  --> $DIR/reserved_keyword_two_times_on_initialize.rs:1:1
   |
1  | / frame_support::decl_module! {
2  | |     pub struct Module<T: Config> for enum Call where origin: T::Origin, system=self {
3  | |         fn on_initialize() -> Weight {
4  | |             0
...  |
10 | |     }
11 | | }
   | |_^
   |
   = note: this error originates in the macro `$crate::decl_module` (in Nightly builds, run with -Z macro-backtrace for more info)
